@@ -1,24 +1,25 @@
 package com.example.lionsforest.domain.group.service;
 
 import com.example.lionsforest.domain.group.Group;
-import com.example.lionsforest.domain.group.dto.request.GroupDeleteRequestDto;
 import com.example.lionsforest.domain.group.dto.request.GroupRequestDto;
+import com.example.lionsforest.domain.group.dto.response.GroupGetDetailResponseDto;
+import com.example.lionsforest.domain.group.dto.response.GroupGetResponseDto;
 import com.example.lionsforest.domain.group.dto.response.GroupResponseDto;
 import com.example.lionsforest.domain.group.repository.GroupRepository;
 import com.example.lionsforest.domain.group.dto.request.GroupUpdateRequestDto;
 import com.example.lionsforest.domain.group.GroupPhoto;
 import com.example.lionsforest.domain.group.repository.GroupPhotoRepository;
 import com.example.lionsforest.domain.user.User;
-import com.example.lionsforest.domain.group.service.LocalUploadService;
 
 
-import jakarta.transaction.Transactional;
+import org.springframework.transaction.annotation.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -62,58 +63,69 @@ public class GroupService {
                 saved.getLocation(), saved.getState());
     }
 
-/*    // 모임 정보 전체 조회
-    public List<GroupResponseDto> getAllGroup(){
+    // 모임 정보 전체 조회(썸네일 포함)
+    @Transactional(readOnly = true)
+    public List<GroupGetResponseDto> getAllGroup(){
         return groupRepository.findAll().stream()
-                .map(GroupResponseDto::fromEntity)
-                .toList();
+                .map(GroupGetResponseDto::fromEntity)
+                .collect(Collectors.toList());
     }
 
 
     // 모임 정보 상세 조회
-    public GroupResponseDto getGroupById(Long id) {
-        Group product = groupRepository.findById(id)
+    @Transactional(readOnly = true)
+    public GroupGetDetailResponseDto getGroupById(Long id) {
+
+        Group group = groupRepository.findByIdWithPhotos(id)
                 .orElseThrow(() -> new IllegalArgumentException("해당 모임이 존재하지 않습니다."));
-        return GroupResponseDto.fromEntity(product);
+
+        return GroupGetDetailResponseDto.fromEntity(group);
     }
 
     // 모임 수정
     @Transactional
-    public GroupResponseDto updateGroup(Long groupId, GroupUpdateRequestDto dto){
-
-        // 유저 조회
-        User user = userRepository.findById(dto.getUserId())
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 유저입니다."));
+    public GroupResponseDto updateGroup(Long groupId, GroupUpdateRequestDto dto, User user){
 
         // 모임 조회
         Group group = groupRepository.findById(groupId)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 모임입니다."));
 
         // 유저 권한 확인
-        if(!group.getLeader().equals(user.getId())){
+        if(!group.getLeader().getId().equals(user.getId())){
             throw new IllegalArgumentException("모임장만 모임을 수정할 수 있습니다.");
         }
 
-        // 모임 정보 수정
-        group.update(dto.getTitle(), dto.getCategory(), dto.getCount(), dto.getMeeting_at(), dto.getLocation(), dto.getState());
+        if (dto.getTitle() != null) {
+            group.setTitle(dto.getTitle());
+        }
+        if (dto.getCategory() != null) {
+            group.setCategory(dto.getCategory());
+        }
+        if (dto.getCapacity() != null) {
+            group.setCapacity(dto.getCapacity());
+        }
+        if (dto.getMeetingAt() != null) {
+            group.setMeetingAt(dto.getMeetingAt());
+        }
+        if (dto.getLocation() != null) {
+            group.setLocation(dto.getLocation());
+        }
+        if (dto.getState() != null) {
+            group.setState(dto.getState());
+        }
 
         return GroupResponseDto.fromEntity(group);
     }
 
     // 모임 삭제
     @Transactional
-    public void deleteGroup(Long groupId, GroupDeleteRequestDto dto){
-
-        // 유저 조회
-        User user = userRepository.findById(dto.getUserId())
-                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 유저입니다."));
-
+    public void deleteGroup(Long groupId, User user){
         // 모임 조회
         Group group = groupRepository.findById(groupId)
                 .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 모임입니다."));
 
         // 유저 권한 확인
-        if(!group.getLeader().equals(user.getId())){
+        if(!group.getLeader().getId().equals(user.getId())){
             throw new IllegalArgumentException("모임장만 모임을 수정할 수 있습니다.");
         }
 
@@ -121,5 +133,57 @@ public class GroupService {
         groupRepository.delete(group);
     }
 
-*/
+
+    //사진 일괄 관리 (추가 + 삭제)
+    @Transactional
+    public void managePhotos(Long groupId, List<MultipartFile> addPhotos, List<Long> deletePhotoIds, User user) {
+
+        Group group = groupRepository.findById(groupId)
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 모임입니다."));
+        if (!group.getLeader().getId().equals(user.getId())) {
+            throw new IllegalArgumentException("모임장만 사진을 수정할 수 있습니다.");
+        }
+
+        // 사진 갯수 제한 검증(최대 5장)
+        // 현재 사진 개수
+        int currentPhotoCount = groupPhotoRepository.countByGroupId(groupId); // (Repository에 countByGroupId 추가 필요)
+        // 삭제할 개수
+        int deleteCount = (deletePhotoIds != null) ? deletePhotoIds.size() : 0;
+        // 추가할 개수
+        int addCount = (addPhotos != null) ? addPhotos.size() : 0;
+        // 최종 개수 확인
+        if (currentPhotoCount - deleteCount + addCount > 5) {
+            throw new IllegalArgumentException("사진은 최대 5개까지만 업로드할 수 있습니다.");
+        }
+
+        // 사진 삭제 (DB + 로컬/S3 파일 삭제)
+        if (deletePhotoIds != null && !deletePhotoIds.isEmpty()) {
+            List<GroupPhoto> photosToDelete = groupPhotoRepository.findAllById(deletePhotoIds);
+
+            for (GroupPhoto photo : photosToDelete) {
+                if (!photo.getGroup().getId().equals(groupId)) {
+                    throw new IllegalArgumentException("다른 모임의 사진을 삭제할 수 없습니다.");
+                }
+                s3UploadService.delete(photo.getPhoto());
+            }
+            groupPhotoRepository.deleteAll(photosToDelete);
+        }
+
+        // 사진 추가 (로컬/S3 업로드 + DB 저장)
+        if (addPhotos != null && !addPhotos.isEmpty()) {
+            // (createGroup의 사진 추가 로직과 동일)
+            List<GroupPhoto> groupPhotos = new ArrayList<>();
+            // (참고: photo_order는 이 로직에서 관리하기 매우 복잡해집니다)
+            for (int i = 0; i < addPhotos.size(); i++) {
+                String photoUrl = s3UploadService.upload(addPhotos.get(i), "group-photos");
+                groupPhotos.add(GroupPhoto.builder()
+                        .group(group)
+                        .photo(photoUrl)
+                        .photo_order(i + 100) // (순서 로직은 별도 정책 필요)
+                        .build());
+            }
+            groupPhotoRepository.saveAll(groupPhotos);
+        }
+    }
+
 }
